// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > renders label with htmlFor 1`] = `
<div>
  <label
    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
    data-slot="label"
    for="name"
  >
    Name
  </label>
</div>
`;

exports[`Label > renders label with text 1`] = `
<div>
  <label
    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
    data-slot="label"
  >
    Username
  </label>
</div>
`;
